idea/testData/multiplatform/incompleteActualization/jvmAndJs/jvmAndJs.kt
package foo

expect class <!NO_ACTUAL_FOR_EXPECT!>ExpectInMiddleActualInJsOnly<!>
expect class <!NO_ACTUAL_FOR_EXPECT!>ExpectInMiddleActualInJvmOnly<!>